--- a/index.html
+++ b/index.html
@@ -224,8 +224,8 @@ $(document).ready(function () {
 <p>I like <a href="https://www.google.com">Google</a>.</p>
 <p>I also linked my <a href="about.html">about page</a>.</p>
 </div>
-<div id="section" class="section level3">
-<h3></h3>
+<div id="headshot" class="section level3">
+<h3>Headshot</h3>
 <p><img src="Images/headshot.jpg" style="width:75%"></p>
 </div>
 
