many more edits

--- a/Experience.html
+++ b/Experience.html
@@ -11,7 +11,7 @@
 
 
 
-<title>About</title>
+<title>Experience</title>
 
 <script src="site_libs/jquery-1.11.3/jquery.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -210,15 +210,16 @@ $(document).ready(function () {
 
 
 
-<h1 class="title toc-ignore">About</h1>
+<h1 class="title toc-ignore">Experience</h1>
 
 </div>
 
 
-<div id="about-this-site" class="section level3">
-<h3>About this site</h3>
-<p>This website was made using Rstudio by Tom Carpino.</p>
-<p>Last update on October 18, 2018.</p>
+<div id="professional-experience" class="section level3">
+<h3>Professional Experience</h3>
+<p>Check out my <a href="https://linkedin.com/in/tomcarpino/">LinkedIn Profile</a>.</p>
+<p>Here is a copy of my current resume:</p>
+<p><img src="Documents/resume.pdf" alt="some text"  width="4200" height="4200"></p>
 </div>
 
 
