--- a/index.html
+++ b/index.html
@@ -190,7 +190,10 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
-  <a href="mailto:&lt;you@youremail.com&gt;">
+  <a href="Experience.html">Experience</a>
+</li>
+<li>
+  <a href="mailto:&lt;tc2899@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
   </a>
@@ -215,18 +218,23 @@ $(document).ready(function () {
 </div>
 
 
-<div id="i-have-a-webpage" class="section level3">
-<h3>I have a webpage!</h3>
-<p>And I can put all kinds of stuff on it!</p>
+<div id="introduction" class="section level3">
+<h3>Introduction</h3>
+<p>Tom Carpino is a dedicated, innovative, and skilled data analyst experienced in SAS, SQL, and quality improvement seeking full-time healthcare or business strategy consulting or analyst positions to start in Summer 2019.</p>
+<p>I have worked on numerous diverse teams in high-intensity challenges, hackathons, and competitions. This has been highlighted in solutions to healthcare cases at Johns Hopkins and Yale, in topics ranging from stem cell banking and therapy to wearable medical devices. Additionally, I was an invited participant through the Broad Institute of Harvard and MIT to compete in a queer health hackathon to increase awareness of health disparities amongst LGBTQ individuals.</p>
+<p>Other past projects and experience include strategic development and project management for a tech startup, Columbia’s workplace design challenge, ecological modeling in Portugal, and monitoring and evaluation at a public hospital in the Dominican Republic. I also have significant experience in epidemiologic outbreak investigation and infection prevention.</p>
 </div>
-<div id="add-links" class="section level3">
-<h3>Add links</h3>
-<p>I like <a href="https://www.google.com">Google</a>.</p>
-<p>I also linked my <a href="about.html">about page</a>.</p>
+<div id="important-experience" class="section level3">
+<h3>Important Experience</h3>
+<p>I also linked my resume in the <a href="Experience.html">Professional Experience</a> tab.</p>
 </div>
 <div id="headshot" class="section level3">
 <h3>Headshot</h3>
 <p><img src="Images/headshot.jpg" style="width:75%"></p>
+</div>
+<div id="website-creation" class="section level3">
+<h3>Website Creation</h3>
+<p>Information abou thow this website was created can be found under the <a href="About.html">About</a> tab.</p>
 </div>
 
 
