--- a/Experience.html
+++ b/Experience.html
@@ -190,6 +190,9 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="Experience.html">Experience</a>
+</li>
+<li>
   <a href="mailto:&lt;tc2899@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -218,8 +221,8 @@ $(document).ready(function () {
 <div id="professional-experience" class="section level3">
 <h3>Professional Experience</h3>
 <p>Check out my <a href="https://linkedin.com/in/tomcarpino/">LinkedIn Profile</a>.</p>
-<p>Here is a copy of my current resume:</p>
-<p><img src="Documents/resume.pdf" alt="some text"  width="4200" height="4200"></p>
+<p>PDF does not appear to be working;</p>
+<p><img src="Documents/resume.pdf" alt="Just see my LinkedIn Profile Above :)"  width="4200" height="4200"></p>
 </div>
 
 
