--- a/about.html
+++ b/about.html
@@ -190,6 +190,9 @@ $(document).ready(function () {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="Experience.html">Experience</a>
+</li>
+<li>
   <a href="mailto:&lt;tc2899@cumc.columbia.edu&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -218,7 +221,7 @@ $(document).ready(function () {
 <div id="about-this-site" class="section level3">
 <h3>About this site</h3>
 <p>This website was made using Rstudio by Tom Carpino.</p>
-<p>Last update on October 18, 2018.</p>
+<p>Last update on November 1, 2018.</p>
 </div>
 
 
