--- a/index.html
+++ b/index.html
@@ -224,9 +224,11 @@ $(document).ready(function () {
 <p>I have worked on numerous diverse teams in high-intensity challenges, hackathons, and competitions. This has been highlighted in solutions to healthcare cases at Johns Hopkins and Yale, in topics ranging from stem cell banking and therapy to wearable medical devices. Additionally, I was an invited participant through the Broad Institute of Harvard and MIT to compete in a queer health hackathon to increase awareness of health disparities amongst LGBTQ individuals.</p>
 <p>Other past projects and experience include strategic development and project management for a tech startup, Columbia’s workplace design challenge, ecological modeling in Portugal, and monitoring and evaluation at a public hospital in the Dominican Republic. I also have significant experience in epidemiologic outbreak investigation and infection prevention.</p>
 </div>
-<div id="important-experience" class="section level3">
-<h3>Important Experience</h3>
+<div id="important-information-and-links" class="section level3">
+<h3>Important Information and Links</h3>
 <p>I also linked my resume in the <a href="Experience.html">Professional Experience</a> tab.</p>
+<p>Tom’s Github account can be found <a href="https://github.com/tomcarpino">here</a>.</p>
+<p>Tom’s email can be found using the mail icon tool on the top right.</p>
 </div>
 <div id="headshot" class="section level3">
 <h3>Headshot</h3>
