--- a/Experience.html
+++ b/Experience.html
@@ -199,7 +199,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/tomcarpino/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
