--- a/index.html
+++ b/index.html
@@ -199,7 +199,7 @@ $(document).ready(function () {
   </a>
 </li>
 <li>
-  <a href="http://github.com/&lt;YOUR_GH_NAME&gt;/">
+  <a href="http://github.com/tomcarpino/">
     <span class="fa fa-github fa-lg"></span>
      
   </a>
@@ -227,7 +227,7 @@ $(document).ready(function () {
 <div id="important-information-and-links" class="section level3">
 <h3>Important Information and Links</h3>
 <p>I also linked my resume in the <a href="Experience.html">Professional Experience</a> tab.</p>
-<p>Tom’s Github account can be found <a href="https://github.com/tomcarpino">here</a>.</p>
+<p>Tom’s Github account can be found <a href="https://github.com/tomcarpino">here</a>, which is also listed in the top right Github icon.</p>
 <p>Tom’s email can be found using the mail icon tool on the top right.</p>
 </div>
 <div id="headshot" class="section level3">
